--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,16 +4,20 @@
 }
 
 main{
-    padding: 25px;
-    background-color: rgb(0, 47, 255);
+    padding: 30px;
+  
 }
 
 body {
-    background-color: rgba(0, 89, 255, 0.699);
+    background-color: rgb(30 95 149);
+    background-image: url(deep\ sea.jpg);
+    color: #ff3c3c;
+    background-size: 100%;
 }
 .top {
     padding: 20px;
     font-size: 20px; 
+    
 }
 
 .navegação {
@@ -50,6 +54,18 @@ body {
         height: 100px;
 }
 
+.bot {
+    background-color: rgba(0, 89, 255, 0.699);
+    color: rgb(238, 255, 0);
+    text-decoration: none;
+    padding: 20px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    font-size: 15px;
+}
+
 .botao:hover {
     background-color: rgb(0, 255, 34);
 }
@@ -63,11 +79,13 @@ body {
     padding: 25px;
     text-align: center;
     margin-left: auto;
-    margin-right: auto   
+    margin-right: auto;
+    background-color: rgb(30 95 149);
 }
 
 .vendas img {
 width:100%;
+
 }
 .texto {
     text-align: center;
@@ -100,6 +118,7 @@ width:100%;
     padding: 30px;   
     text-align: center;
     min-width: 320px;
+    color: #ff0000;
 }
 
 .contato {
@@ -109,6 +128,7 @@ width:100%;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
+    color: rgb(0, 255, 34) ;
 }
 
 .formulario { 
@@ -133,4 +153,10 @@ textarea.campo {
 .final {
     margin-left: auto;
     font-size: 30px;
+}
+
+.map {
+    width: 100%;
+    margin-bottom: auto;
+    margin-right: auto;
 }
