--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,20 +4,19 @@
 }
 
 main{
-    padding: 30px;
+    padding: 0px;
   
 }
 
 body {
     background-color: rgb(30 95 149);
-    background-image: url(deep\ sea.jpg);
     color: #ff3c3c;
     background-size: 100%;
 }
 .top {
     padding: 20px;
     font-size: 20px; 
-    
+    background-image: url(deep\ sea.jpg);
 }
 
 .navegação {
@@ -25,14 +24,12 @@ body {
     list-style: none;
    
 }
-.navegação img {
-    width: 60px;
-}
 
 .grade {
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    background-color: #1a17b6;
 }
 
 .titulo {
@@ -81,10 +78,12 @@ body {
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(30 95 149);
+    width: 320px;
 }
 
 .vendas img {
 width:100%;
+height: 100%;
 
 }
 .texto {
@@ -119,6 +118,7 @@ width:100%;
     text-align: center;
     min-width: 320px;
     color: #ff0000;
+    background-image: url(deep\ sea.jpg);
 }
 
 .contato {
@@ -159,4 +159,23 @@ textarea.campo {
     width: 100%;
     margin-bottom: auto;
     margin-right: auto;
+}
+
+.logo1 {
+    width: 100px;
+}
+
+@media (min-width: 720px) {
+   .vendas { 
+    margin: 23px;
+    padding: 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(30 95 149);
+    width: 320px;
+    }
+    .vendas img {
+
+    }
 }
