--- a/css/estilo.css
+++ b/css/estilo.css
@@ -85,7 +85,7 @@ body {
 
 .vendas img {
 width:100%;
-height: 100%;
+
 
 }
 .texto {
@@ -218,4 +218,12 @@ textarea.campo {
         grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
         background-color: #1a17b6;
     }
+}
+
+@media {
+    .texto {
+        text-align: center;
+        font-size: 15px;
+        margin: auto;
+    }    
 }
